vm_instance_5678.tf
resource "aws_instance" "example_vm" {
  ami           = "ami-0c55b159cbfafe1d0"
  instance_type = "t2.micro"

  tags = {
    Name = "ExampleVM"
  }
}
